--- a/app/src/main/res/layout/activity_create_reward.xml
+++ b/app/src/main/res/layout/activity_create_reward.xml
@@ -53,7 +53,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:text="All Rewards"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:background="#c5c5f9"/>
 
     <ListView
         android:layout_width="wrap_content"
