--- a/app/src/main/res/layout/activity_create_wishlist_item.xml
+++ b/app/src/main/res/layout/activity_create_wishlist_item.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.theironyard.finalproject.CreateWishlistItemActivity">
+    tools:context=".activities.CreateWishlistItemActivity">
 
     <LinearLayout
         android:orientation="vertical"
