--- a/app/src/main/res/layout/activity_edit_reward.xml
+++ b/app/src/main/res/layout/activity_edit_reward.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.theironyard.finalproject.EditRewardActivity">
+    tools:context=".activities.EditRewardActivity">
 
     <LinearLayout
         android:orientation="vertical"
