--- a/app/src/main/res/layout/app_bar_child_profile.xml
+++ b/app/src/main/res/layout/app_bar_child_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.theironyard.finalproject.ChildProfileActivity">
+    tools:context=".activities.ChildProfileActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
