--- a/app/src/main/res/layout/content_child_profile.xml
+++ b/app/src/main/res/layout/content_child_profile.xml
@@ -9,7 +9,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                tools:context="com.theironyard.finalproject.ChildProfileActivity"
+                tools:context=".activities.ChildProfileActivity"
                 tools:showIn="@layout/app_bar_child_profile">
 
     <TextView
