--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activities.HomeActivity">
+    tools:context=".activities.HomeActivity"
+    >
 
     <LinearLayout
         android:orientation="vertical"
@@ -36,22 +37,27 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Register"
-                android:id="@+id/registerButton"/>
+                android:id="@+id/registerButton"
+                android:layout_weight="1"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Parent Login"
-                android:id="@+id/pLoginButton"/>
+                android:id="@+id/pLoginButton"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Child Login"
-                android:id="@+id/cLoginButton"/>
+                android:id="@+id/cLoginButton"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"/>
         </LinearLayout>
 
     </LinearLayout>
