--- a/app/src/main/res/layout/content_child_profile.xml
+++ b/app/src/main/res/layout/content_child_profile.xml
@@ -22,16 +22,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current Point Total:"
-            android:id="@+id/textView6"
-            android:textSize="18sp"/>
+            android:id="@+id/childProfilePointTotalText"
+            android:hint="Points"
+            android:textSize="22sp"
+            android:textColor="#059f14"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/childProfilePointTotalText"
-            android:hint="Total Points"
+            android:text=" points"
+            android:id="@+id/textView6"
             android:textSize="18sp"/>
+
     </LinearLayout>
 
     <TextView
