commiting changes; child can view values of rewards and chores.

--- a/app/src/main/res/layout/activity_child_view_rewards.xml
+++ b/app/src/main/res/layout/activity_child_view_rewards.xml
@@ -64,5 +64,6 @@
         android:layout_alignParentStart="true"
         android:layout_above="@+id/childViewRewardsCashInButton"
         android:choiceMode="singleChoice"
-        android:listSelector="#f9f5d2"/>
+        android:listSelector="#f9f5d2"
+        android:foreground="@color/abc_background_cache_hint_selector_material_light" />
 </RelativeLayout>
