--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hi! Welcome to the Chore Tracker App.  Please register or login."
+                android:text="Hi! Welcome to the Chalkboard Chores App.  Please register or login."
                 android:id="@+id/textView36"
                 android:textSize="32sp"
                 android:textAlignment="center"/>
